--- a/a-club-site-making-main/a-club-site-making-main/web-program__page-start/index.html
+++ b/a-club-site-making-main/a-club-site-making-main/web-program__page-start/index.html
@@ -25,7 +25,7 @@
             <button type="submit" class = "search-button">
                 <i class="fa-solid fa-magnifying-glass"></i>
             </button>
-            <input type ="text" name ="s_keyword" placeholder="찾으시는 동아리, 소모임 있으신가요??"" id="searchform-input" class ="search-input">
+            <input type ="text" name ="s_keyword" placeholder="찾으시는 동아리, 소모임 있으신가요??" id="searchform-input" class ="search-input">
             
         </form>
     </div>
